@@ -41,6 +41,22 @@ namespace ClangCommon
             {
                 commandLine.Add(System.String.Format("-F{0}", path.ParseAndQuoteIfNecessary()));
             }
+            if (options.MinimumVersionSupported != null)
+            {
+                var minVersionRegEx = new System.Text.RegularExpressions.Regex("^(?<Type>[a-z]+)(?<Version>[0-9.]+)$");
+                var match = minVersionRegEx.Match(options.MinimumVersionSupported);
+                if (!match.Groups["Type"].Success)
+                {
+                    throw new Bam.Core.Exception("Unable to extract SDK type from: '{0}'", options.MinimumVersionSupported);
+                }
+                if (!match.Groups["Version"].Success)
+                {
+                    throw new Bam.Core.Exception("Unable to extract SDK version from: '{0}'", options.MinimumVersionSupported);
+                }
+                commandLine.Add(System.String.Format("-m{0}-version-min={1}",
+                    match.Groups["Type"].Value,
+                    match.Groups["Version"].Value));
+            }
         }
     }
 }
