@@ -302,10 +302,6 @@ namespace XcodeBuilder
             // if these are inconsistent the IDE shows the product in red
             projectConfig["CONFIGURATION_BUILD_DIR"] = new UniqueConfigurationValue("$(SYMROOT)/$(CONFIGURATION)");
 
-            var clangPackage = Bam.Core.Graph.Instance.Packages.Where(item => item.Name == "Clang").First();
-            var clangMeta = clangPackage.MetaData as Clang.MetaData;
-            projectConfig["SDKROOT"] = new UniqueConfigurationValue(clangMeta.SDK);
-
             this.ConfigurationLists[0].AddConfiguration(projectConfig);
             this.AllConfigurations.Add(projectConfig);
             this.ProjectConfigurations.Add(config, projectConfig);
@@ -329,6 +325,27 @@ namespace XcodeBuilder
             var newConfig = new Configuration(module.BuildEnvironment.Configuration);
             this.AllConfigurations.Add(newConfig);
             configList.AddConfiguration(newConfig);
+
+            var clangPackage = Bam.Core.Graph.Instance.Packages.Where(item => item.Name == "Clang").First();
+            var clangMeta = clangPackage.MetaData as Clang.MetaData;
+
+            // set which SDK to build against
+            newConfig["SDKROOT"] = new UniqueConfigurationValue(clangMeta.SDK);
+
+            // set the minimum version of OSX/iPhone to run against
+            var minVersionRegEx = new System.Text.RegularExpressions.Regex("^(?<Type>[a-z]+)(?<Version>[0-9.]+)$");
+            var match = minVersionRegEx.Match(clangMeta.MinimumVersionSupported);
+            if (!match.Groups["Type"].Success)
+            {
+                throw new Bam.Core.Exception("Unable to extract SDK type from: '{0}'", clangMeta.MinimumVersionSupported);
+            }
+            if (!match.Groups["Version"].Success)
+            {
+                throw new Bam.Core.Exception("Unable to extract SDK version from: '{0}'", clangMeta.MinimumVersionSupported);
+            }
+
+            var optionName = System.String.Format("{0}_DEPLOYMENT_TARGET", match.Groups["Type"].Value.ToUpper());
+            newConfig[optionName] = new UniqueConfigurationValue(match.Groups["Version"].Value);
 
             return newConfig;
         }
